--- a/style.css
+++ b/style.css
@@ -81,3 +81,87 @@ img {
   width: 40px;
   height: 40px;
 }
+
+.modal-header {
+  background-color:#254336;
+  border-bottom: none;
+  color: #254336;
+}
+
+.modal-header .btn-close {
+  filter: invert(1);
+  padding: none;
+}
+
+.modal-header .btn-close:hover {
+  color: white !important;
+}
+
+.modal-body {
+  border-top: none;
+  border-bottom: none;
+  font-family: "Merriweather", serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #254336;
+  justify-content: space-between;
+  padding: 40px;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+}
+
+.modal-body h2 {
+  font-weight: bold;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.modal-body form {
+  margin-top: 20px;
+}
+
+.modal-body form input, .modal-body form textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.modal-body form input[type="submit"] {
+  background-color: #4CAF50;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal-body form input[type="submit"]:hover {
+  background-color: #3e8e41;
+}
+
+.modal-body p {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.modal-footer {
+  border-top: none;
+}
+
+#message-text {
+  width: 100%;
+  height: 150px;
+  padding: 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 0;
+  border-bottom:1px solid #ccc;
+  resize: none;
+}
+
+#message:focus {
+  border-color: #aaa;
+  box-shadow: none;
+}
