alterei a cor da tabela

--- a/cidades.css
+++ b/cidades.css
@@ -48,3 +48,8 @@
   color: #254336;
   background-color: #f8f9fa;
 }
+
+.table>:not(caption)>*>* {
+  color: #254336;
+  background-color: #f8f9fa;
+}
