--- a/style.css
+++ b/style.css
@@ -104,6 +104,10 @@ img {
   font-family: "DM Serif Text", serif;
 }
 
+.button-close:focus {
+  outline: 2px #254336;
+}
+
 @keyframes colorTransition {
   0% {
     color: #CD1818; /* Cor inicial */
