--- a/modal_style.css
+++ b/modal_style.css
@@ -2,6 +2,7 @@
     background-color:#254336;
     border-bottom: none;
     color: #254336;
+    box-shadow:none;
   }
   
   .modal-header .btn-close {
@@ -9,9 +10,10 @@
     padding: none;
   }
   
+  /*De momento não funciona
   .modal-header .btn-close:hover {
     color: white !important;
-  }
+  }*/
   
   .modal-body {
     border-top: none;
@@ -95,3 +97,5 @@
     border-color: #254336;
     color: white;
   }
+
+  
