--- a/style.css
+++ b/style.css
@@ -83,39 +83,31 @@ img {
 }
 
 .banner {
-  overflow: hidden; /* Esconde o texto que sai do contêiner */
-  white-space: nowrap; /* Impede que o texto quebre a linha */
-  width: 100%; /* Largura total do banner */
-  max-height: 80px; /* Altura máxima do banner */
-  display: flex; /* Permite o alinhamento do texto */
-  align-items: center; /* Centraliza verticalmente o texto */
-  background-color: rgb(248, 249, 250); /* Cor de fundo do banner */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra do banner */
-  border-bottom: 1px solid #dee2e6; /* Borda inferior de 1px sólida */
+  overflow: hidden; 
+  white-space: nowrap; 
+  width: 100%; 
+  max-height: 80px; 
+  display: flex; 
+  align-items: center; 
+  background-color: #FFF455; 
 }
 
-.banner span {
+.banner h5 {
   display: inline-block;
-  animation: moveBanner 25s linear infinite, colorTransition 1.5s ease-in-out infinite alternate; 
-  font-size: 24px; /* Tamanho da fonte */
-  padding: 10px; /* Espaçamento */
-  position: relative; /* Permite o uso do transform */
-  color: #002b29;
-  font-family: "DM Serif Text", serif;
-}
+  animation: moveBanner 25s linear infinite; 
+  font-size: 24px; 
+  position: relative; 
+  color: black;
+  padding: 15px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 
-@keyframes colorTransition {
-  0% {
-    color: #CD1818; /* Cor inicial */
-  }
-  100% {
-    color: #002b29; /* Cor final */
-  }
 }
 
 @keyframes moveBanner {
   0% {
-      transform: translateX(300%); /* Começa fora da tela à direita, coloquei 300% porque foi o que fez funcionar */
+      transform: translateX(200%); /* Começa fora da tela à direita, coloquei 300% porque foi o que fez funcionar */
   }
   100% {
       transform: translateX(-100%); /* Termina fora da tela à esquerda */
