--- a/cidades.css
+++ b/cidades.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .font-title {
   font-family: "Merriweather", serif;
   font-weight: 300;
@@ -34,4 +40,36 @@
   background-size: 1rem; /* Tamanho do ícone */
   background-repeat: no-repeat; /* Não repetir o ícone */
   background-position: right center; /* Posição do ícone */
+}
+
+.pricing-table{
+  box-shadow: 0px 0px 18px #ccc;
+  text-align: center;
+  padding: 30px 0px;
+  border-radius: 5px;
+  position: relative;
+}
+
+.pricing-table .content .price{
+   background:linear-gradient(to right, #cf8504 0%, #f41602 100%);
+   width: 90px;
+   height: 90px;
+   margin: auto;
+   line-height: 85px;
+   border-radius: 50%;
+   border: 5px solid #fff;
+   box-shadow: 0px 0px 10px #ccc;
+   margin-top: -50px;
+    transition: all 0.5s ease;
+}
+
+.pricing-table:hover .content .price{
+   transform: scale(1.2);
+}
+
+.pricing-table .content .price h1_50{
+   color:#fff;
+   font-size: 30px;
+   font-weight: 700;
+   font-family: 'Montserrat', sans-serif;
 }
