--- a/style.css
+++ b/style.css
@@ -105,6 +105,21 @@ img {
 
 }
 
+.card-group {
+  display: flex;
+  gap: 5rem;
+}
+
+.btn-custom{
+  background-color: #002b29;
+  border-color: #002b29;
+}
+
+.btn-custom:hover {
+  background-color: #254336;
+  border-color: #254336;
+} 
+
 @keyframes moveBanner {
   0% {
       transform: translateX(200%); /* Começa fora da tela à direita, coloquei 300% porque foi o que fez funcionar */
