--- a/style.css
+++ b/style.css
@@ -44,8 +44,8 @@ img {
 }
 
 .card-img-top {
-  width: 100%; /* Faz a imagem ocupar toda a largura do card */
-  height: 400px; /* Define uma altura fixa para as imagens */
+  width: 100%;
+  height: 400px; 
 }
 
 .icons {
@@ -120,14 +120,6 @@ img {
   outline: 2px #254336;
 }
 
-@keyframes colorTransition {
-  0% {
-    color: #CD1818; /* Cor inicial */
-  }
-  100% {
-    color: #002b29; /* Cor final */
-  }
-}
 
 .card-group {
   display: flex;
@@ -146,7 +138,7 @@ img {
 
 @keyframes moveBanner {
   0% {
-      transform: translateX(200%); /* Começa fora da tela à direita, coloquei 300% porque foi o que fez funcionar */
+      transform: translateX(200%); /* Começa fora da tela à direita, coloquei 200% porque foi o que fez funcionar */
   }
   100% {
       transform: translateX(-100%); /* Termina fora da tela à esquerda */
