--- a/style.css
+++ b/style.css
@@ -22,6 +22,12 @@ img {
   color: #254336;
 }
 
+.font-title {
+  font-family: "Merriweather", serif;
+  font-weight: 300;
+  font-style: normal
+}
+
 .pontosTermoPrivacidade {
   color: #158cba ;
   font-size: 25px;
@@ -143,4 +149,10 @@ img {
   100% {
       transform: translateX(-100%); /* Termina fora da tela à esquerda */
   }
+}
+
+/* Card das opiniões */
+
+.card-color:hover {
+  background-color: #158cba;
 }
